--- a/main.css
+++ b/main.css
@@ -128,6 +128,13 @@
 	margin: 5px 0;
 }
 
+/* Style for the second section title */
+.section-title-other {
+	margin-top: 60px;
+	padding-top: 30px;
+	border-top: 1px solid var(--border-color);
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
 	.tiles-container {
